--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -11,9 +11,10 @@ const THEMES = ["Light", "Dark", "System"]
     class="appearance-none border-none flex hover:scale-110 transition"
     aria-haspopup="true"
     aria-expanded="false"
-    title="Cambiar tema"
-  >
+    title="Cambiar tema" >
+
     <span class="sr-only">Elige el tema</span>
+
     <SunIcon id="light" class="theme-toggle-icon size-5 transition-all" />
     <MoonIcon id="dark" class="theme-toggle-icon absolute size-5 transition-all" />
     <SystemIcon id="system" class="theme-toggle-icon absolute size-5 transition-all" />
@@ -23,16 +24,16 @@ const THEMES = ["Light", "Dark", "System"]
     id="themes-menu"
     class="themes-menu absolute top-8 right-0 min-w-[10rem] rounded-md p-1 text-sm shadow-lg z-50"
     role="menu"
-    aria-hidden="true"
-  >
+    aria-hidden="true" >
+
     <ul>
       {
         THEMES.map((theme) => (
           <li
             role="menuitem"
             tabindex="0"
-            class="themes-menu-option px-3 py-1.5 rounded-sm cursor-pointer select-none focus:outline-none focus:ring-2 focus:ring-[--menu-focus]"
-          >
+            class="themes-menu-option px-3 py-1.5 rounded-sm cursor-pointer select-none focus:outline-none focus:ring-2 
+                  focus:ring-[--menu-focus]">
             {theme}
           </li>
         ))
@@ -86,7 +87,7 @@ const THEMES = ["Light", "Dark", "System"]
     -webkit-backdrop-filter: blur(6px);
   }
 
-  /* TEXTO Y HOVER CON EL AZUL DEL SITIO */
+  /* TEXTO Y HOVER */
   .themes-menu-option {
     color: var(--menu-text);
     transition: color .15s ease, background-color .15s ease;
