--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,11 +3,10 @@ const currentYear = new Date().getFullYear()
 ---
 
 <footer
-  class="opacity-80 m-4 mt-6 md:mt-8 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-6 flex justify-center"
->
+  class="opacity-80 m-4 mt-6 md:mt-8 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-6 flex justify-center">
   <div
-    class="rounded-lg w-full max-w-screen-xl mx-auto flex flex-col md:flex-row md:items-center md:justify-between py-4 text-[15px] text-zinc-800/90 dark:text-zinc-200/90"
-  >
+    class="rounded-lg w-full max-w-screen-xl mx-auto flex flex-col md:flex-row md:items-center md:justify-between 
+          py-4 text-[15px] text-zinc-800/90 dark:text-zinc-200/90">
     <span class="mb-2 md:mb-0 text-center md:text-left">
       &copy; {currentYear} <a href="/" class="hover:underline font-semibold">NatDev</a>. Todos los derechos reservados.
     </span>
